@@ -21,6 +21,7 @@
    - "Last value" type gauge can show non-numeric values
    - "Trusted Nodes" property page shown for condition objects
    - Network map content can be copied to clipboard
+   - Perspectives export/import
 - Android Console:
    - Added option in preference to show/hide legend in graphs
 - Fixed issues: #586, #594, #597, #598, #605, #606, #607, #608, #610
